--- a/Hafta5-2/app/src/main/res/layout/fragment2_activity.xml
+++ b/Hafta5-2/app/src/main/res/layout/fragment2_activity.xml
@@ -5,16 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="0dp"
-        android:layout_height="89dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="290dp"
-        android:layout_marginEnd="29dp"
-        android:text="Merhaba Burası Fragment-2"
-        android:textSize="20dp"
-        android:textStyle="bold"
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fragment2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
